removing letter spacing for hero text and fixing the issue that previous commit created (changed all link colours to black, even on black backgrounds)

--- a/src/components/Contentful/sass/components/_new_design_overrides.scss
+++ b/src/components/Contentful/sass/components/_new_design_overrides.scss
@@ -118,7 +118,7 @@ ul li:before {
     
     p,
     a {
-      color: $white;
+      color: $white !important;
       font-size: $px20;
     }
 
